--- a/styles/style.css
+++ b/styles/style.css
@@ -10,29 +10,88 @@ body {
     height: 100vh;
     padding:0;
     margin:0;
+
+    -webkit-user-select: none;
 }
 
 h1 {
     font-family: 'Open Sans';
     font-style: normal;
-    color: aliceblue;
+    color: #E4E4E4;
+}
+
+button {
+    border: 0px;
+    background-color: 0;
 }
 
 .bar {
     background-color: #050304;
     opacity: .75;
-
-    height: 25px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 21px;
     width: 100%;
+
+    -webkit-app-region: drag;
 }
 
-.barName {    
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 19px;
-    text-align: center;
-    letter-spacing: -0.02em;
+.barLogo {
+    padding-left: 5px;
+    padding-top: 2px;
+}
 
-    position: relative;
-    padding-left: 10px;
+.barOptions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 0px;
+
+    width: 69px;
+}
+
+.barSettings {
+    display: flex;
+    justify-content: center;
+
+    width: 23px;
+
+    -webkit-user-select: auto;
+    -webkit-app-region: no-drag;
+}
+
+.barSettings:hover {
+    background-color: #3A3A3A;
+}
+
+.barTurn {
+    display: flex;
+    justify-content: center;
+    padding-top: 2px;
+
+    width: 23px;
+
+    -webkit-user-select: auto;
+    -webkit-app-region: no-drag;
+}
+
+.barTurn:hover {
+    background-color: #3A3A3A;
+}
+
+.barClose {
+    display: flex;
+    justify-content: center;
+
+    width: 23px;
+    height: 21px;
+
+    -webkit-user-select: auto;
+    -webkit-app-region: no-drag;
+}
+
+.barClose:hover {
+    background-color: #BA0000;
 }
