--- a/res/css/main.css
+++ b/res/css/main.css
@@ -1,92 +1,69 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-size: cover;
-       
-    height: 100vh;
-    padding:0;
-    margin:0;
-
-    user-select: none;
+  background-size: cover;
+  height: 100vh;
+  user-select: none;
 }
 
 #backgroundVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 #bar {
-    background-color: #201f20;
-    opacity: .95;
-
-    height: 21px;
-    width: 100%;
-
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-
-    -webkit-app-region: drag;
+  background-color: #201f20;
+  opacity: 0.95;
+  height: 22px;
+  display: flex;
+  justify-content: space-between;
+  -webkit-app-region: drag;
 }
 
 #logo {
-    height: 21px;
-    width: 30px;
-
-    display: flex;
-    justify-content: center;
+  width: 31px;
+  background-image: url("../img/m2logo.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #togglers {
-    height: 21px;
-    width: 69px;
+  display: flex;
+  justify-content: center;
+}
 
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+.menu-button {
+  background: none;
+  border: none;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 24px;
+  -webkit-app-region: no-drag;
 }
 
 #settings {
-    height: 21px;
-    width: 23px;
-
-    display: flex;
-    justify-content: center;
-    -webkit-app-region: no-drag;
-}
-
-#settings:hover {
-    background-color: #3A3A3A;
+  background-image: url("../img/settings.svg");
 }
 
 #hide {
-    height: 21px;
-    width: 23px;
-
-    display: flex;
-    justify-content: center;
-    -webkit-app-region: no-drag;
+  background-image: url("../img/hide.svg");
 }
 
+#settings:hover,
 #hide:hover {
-    background-color: #3A3A3A;
+  background-color: #3a3a3a;
 }
 
 #close {
-    height: 21px;
-    width: 23px;
-
-    display: flex;
-    justify-content: center;
-    -webkit-app-region: no-drag;
+  background-image: url("../img/close.svg");
 }
 
 #close:hover {
-    background-color: #BA0000;
+  background-color: #ba0000;
 }
