--- a/res/css/main.css
+++ b/res/css/main.css
@@ -11,8 +11,6 @@ body {
 
 #backgroundVideo {
   position: fixed;
-  right: 0;
-  bottom: 0;
   min-width: 100%;
   min-height: 100%;
 }
@@ -45,6 +43,10 @@ body {
   background-position: center;
   width: 24px;
   -webkit-app-region: no-drag;
+}
+
+.menu-button:focus {
+  outline: none;
 }
 
 #settings {
